--- a/style.css
+++ b/style.css
@@ -4,6 +4,12 @@
     font-family: Arial, Helvetica, sans-serif;
 }
 
+body {
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
+}
+
 header {
     height: 50px;
     background-color: red;
@@ -13,19 +19,26 @@ main {
     padding: 20px;
 }
 
-div {
-    margin: 20px 0;
+.label {
+    margin-top: 20px;
 }
 
-input {
+input[type=number] {
     font-size: 16px;
 }
 
+ul {
+    margin: 50px 0;
+    padding-left: 20px;
+}
+
+li {
+    margin-bottom: 10px;
+    text-align: left;
+}
+
 footer {
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    width: 100vw;
+    margin-top: auto;
     padding: 20px 0;
     background-color: red;
     color: white;
@@ -36,11 +49,17 @@ footer > p {
 }
 
 .contato {
-    margin-right: 20px;
+    margin: 0 10px;
     text-decoration: none;
 }
 
 .contato > img {
     width: 50px;
     height: 50px;
+}
+
+@media screen and (max-width: 320px) {
+    input[type=number] {
+        width: 68vw;
+    }
 }
